--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
 .title {
 font-family: Roboto;
 }
+body {
+  margin: 0;
+}
+.wrapper {
+  margin: auto;
+  width: 80%;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+ .logo,.menu {
+  display:inline-block;
+  border: dashed 1px red
+}
+.logo {
+  padding: 40px 0;
+  margin-right: 63%;
+}
+.menu {
+  display: flex;
+  align-items: center;
+}
+ .menu__item {
+  padding: 0 13px;
+  border: dashed 1px red
+}
+.title {
+font-family: Roboto;
+}
+
+.menu__item:last-child {
+  padding-right: 0;
+}
