--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   position: relative;
   padding: 40px 0;
   padding-left: 44px;
-  font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
+  font: bold 24px/31px pt_serifbold;
   margin-right: 63%;
 }
 .logo__circle {
