--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
   font: 500 18px/21px Roboto,arial,helvetica,sans-serif;
   color: #000;
   text-decoration: none;
-  transition: opacity .5s;  
+  transition: opacity .5s;
 }
 .menu__item:last-child {
   margin-right: 0;
@@ -60,12 +60,12 @@ body {
   width: 100%;
   height: 3px;
   background: #0056ec;
-  opacity: 0;
+  opacity: 1;
   transition: opacity .5s;
 }
 .menu__item:hover {
   opacity: 0.5;
 }
-.menu__item:hover:after,.menu__item_active:after {
+.menu__item:hover:after {
   opacity: 1;
 }
