--- a/style.css
+++ b/style.css
@@ -63,6 +63,16 @@ body {
   opacity: 1;
   transition: opacity .5s;
 }
+.menu__item:after {
+  position: absolute;
+  display: block;
+  content: "";
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056ec;
+  opacity: 0;
+}
 .menu__item:hover {
   opacity: 0.5;
 }
