--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
  .logo,.menu {
   display:inline-block;
@@ -16,7 +17,7 @@ body {
   position: relative;
   padding: 40px 0;
   padding-left: 44px;
-  font: bold 24px/31px pt_serifbold;
+  font: bold 24px/31px pt_serifbold,arial,helvetica,sans-serif;
   margin-right: 63%;
 }
 .logo__circle {
@@ -78,4 +79,32 @@ body {
 }
 .menu__item:hover:after {
   opacity: 1;
+}
+.main {
+  padding: 0 63% 100px 0;
+  background: top right no-repeat url(img/mainlmg.svg);
+}
+.main__title {
+  margin: 0 0 40px 0;
+  font: bold 50px/65px pt_serifbold,arial,helvetica,sans-serif;
+}
+.main__subtitle {
+  margin: 0 0 41px 0;
+  font: 500 18px/21px Roboto,arial,helvetica,sans-serif;
+}
+.main__button {
+  display: inline-block;
+  font: 500 14px/16px Roboto,arial,helvetica,sans-serif;
+  color: #fff;
+  background: #0056EC;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: opacity .5s;
+}
+.main__button:hover {
+  opacity: .5;
+}
+.main__title-text_highlight {
+  background: #ECF3FF;
 }
